# information-retrieval

./: .gitignore  Boolean.py  Dockerfile  app.py  build.py  cloud_storage.py  docker-compose.yml  index.py  live_indexing.py  mytest.py  preprocessing.py  pyproject.toml  requirements.txt  search.py  test.py  test.txt  utils.py
.github/workflows/: build.yml  update-stats.yml
NHS/A-Z/: a.json  az-code.py  azkey.txt  check_json.txt  lastChecked.txt  nhs_az.csv  test.txt
NHS/A-Z/Individual NHS jsons/: b-d.json  e-h.json  v-z.json
example_data/MedicinesComplete/: drugs_abacavir_406847720.json  interactions_alcohol.json  treatmentsummary_analgesics_133479411.json
example_data/NHS/: health_az_a.json  health_az_atopic_eczema.json  medicines_a.json  medicines_azathioprine.json
models/: squad_torch_bert.json
models/documents/: _common_metadata  _metadata
